[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/robot_Attack.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://sprites/player/robot_walk.png" type="Texture" id=3]
[ext_resource path="res://sprites/player/player.material" type="Material" id=4]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 22.6414, 24.6828 )

[sub_resource type="Animation" id=4]
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 8 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 7 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.301 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 40, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.2
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 3 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[node name="MainPlayer" type="KinematicBody2D" groups=[
"player",
]]
position = Vector2( -1.73395, -2.534 )
collision_layer = 2
collision_mask = 31
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 4 )
position = Vector2( 0.623505, 0.860291 )
texture = ExtResource( 3 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0.623505, 4.56 )
shape = SubResource( 3 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 4 )
anims/move = SubResource( 5 )
anims/stop = SubResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
visible = false
position = Vector2( 0.623749, 5.4678 )
offset = Vector2( 0, -100 )
current = true
zoom = Vector2( 1.1, 1.1 )
smoothing_enabled = true
smoothing_speed = 20.0
drag_margin_top = 0.0
drag_margin_bottom = 0.5
editor_draw_drag_margin = true

[node name="health_tag" type="Label" parent="."]
margin_left = -33.6203
margin_top = -36.9145
margin_right = 75.3797
margin_bottom = -14.9145
text = "Health = 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WallDetector_Right" type="Node2D" parent="."]
visible = false

[node name="WallDetector_RightTop" type="RayCast2D" parent="WallDetector_Right"]
position = Vector2( 14.8345, -6.9 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallDetector_RightBottom" type="RayCast2D" parent="WallDetector_Right"]
position = Vector2( 15.6717, 16.8 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallDetector_Left" type="Node2D" parent="."]
visible = false

[node name="WallDetector_LeftTop" type="RayCast2D" parent="WallDetector_Left"]
position = Vector2( -13.0888, -6.9 )
rotation = 1.57079
enabled = true
cast_to = Vector2( 0, 10 )

[node name="WallDetector_LeftBottom" type="RayCast2D" parent="WallDetector_Left"]
position = Vector2( -14.3243, 16.8 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 10 )
